feat: add Navbar component with responsive design, scroll progress, and global CSS styles including animations and utilities.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
 
-<head>
   <meta charset="UTF-8" />
   <!-- fixed favicon path -->
   <link rel="icon" type="image/png" href="/front.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#0f172a" />
-  <title>Munnar Ram Inter College Website</title>
+  <meta name="description" content="Munnar Ram Inter College provides quality education and prepares students for a brighter future. Explore our courses, admissions, and facilities." />
+  <meta name="keywords" content="Munnar Ram Inter College, School, Education, Admission, Courses, Best School" />
+  <meta property="og:title" content="Munnar Ram Inter College" />
+  <meta property="og:description" content="Preparing students for a brighter future. Quality education for everyone." />
+  <meta property="og:image" content="/front.jpg" />
+  <meta property="og:type" content="website" />
+  <title>Munnar Ram Inter College - Excellence in Education</title>
 </head>
 
 <body>
